src/main.css
body {
  margin: 0 !important;
  padding: 0 !important;
  box-sizing: border-box;
  min-height: 100vh;
  flex: 1;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  font-family: Arial, Helvetica, sans-serif;
}

.stop-scrolling {
  height: 100%;
  overflow: hidden;
}

.header-ul {
  display: flex;
  margin: 0;
  padding: 10px;
  border-bottom: 1px solid;
  list-style: none;
  align-items: center;
}

.header-img {
  height: 8vh;
  width: 8vh;
}

.header-item {
  margin-left: 1.5em;
  font-weight: bold;
  cursor: pointer;
}

.header-item:hover {
  color: gray;
  text-decoration: underline;
}

.row {
  justify-content: center;
  margin: 0 10px;
}

.comment-btn:hover {
  border: 2px solid black;
}

.likesComments {
  display: flex;
  justify-content: space-between;
  align-items: baseline;
}

.menuDiv {
  border: solid;
  border-color: #666;
  border-radius: 5px;
  padding: 3px;
  margin: 10px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
}

.footer {
  margin: 0;
  padding: 10px;
  border-top: 1px solid;
}

.overlay {
  background-color: #fff;
  width: 100vw;
  height: 100%;
  display: flex;
  justify-content: center;
  position: fixed;
  top: 0;
  left: 0;
  opacity: unset;
  text-align: center;
  z-index: 20;
  max-height: 100vh;
  overflow-y: auto;
  margin-bottom: 30px;
}

.c-loading {
  font-size: 1rem;
}

.pop-up {
  text-align: center;
  width: 70%;
}

.pop-up .image {
  width: 100%;
}

.pop-up-image {
  width: 100%;
  margin: 20px 0;
}

.form {
  display: flex;
  flex-direction: column;
  align-items: center;
  text-align: center;
  margin: auto;
}

.form > * {
  margin: 10px 0;
  width: 100%;
}

.pop-up-description {
  margin-bottom: 20px;
  text-align: justify;
}

.comment {
  text-align: left;
}

.new-comment-heading {
  margin-top: 50px;
}

.close {
  position: fixed;
  right: 1%;
  top: 0;
  background-color: transparent;
  border: none;
  font-size: 2rem;
}

.hide {
  display: none;
}

.comment-button {
  margin-bottom: 20px;
  background-color: #333;
  color: #fff;
  border: none;
  border-radius: 5px;
  height: 40px;
  font-size: 1.5rem;
}

.comment-button:hover {
  background-color: rgb(3, 66, 3);
}

@media all and (min-width: 786px) {
  .pop-up {
    text-align: center;
    width: 60%;
  }

  .close {
    right: 16%;
    font-size: 3rem;
  }

  .form > * {
    margin: 10px 0;
    width: 50%;
  }

  .header-img {
    margin-left: 2em;
  }

  .header-item {
    margin-left: 2em;
  }
}

